# onnxocr_cpp

./: .gitignore  CMakeLists.txt  README.md  README_CN.md
demo/: main.cpp
internal/: classifier.hpp  cls_postprocess.hpp  config.hpp  ctc_postprocess.hpp  db_postprocess.hpp  detector.hpp  onnx_session.hpp  onnxocr.hpp  preprocess.hpp  recognizer.hpp  text_system.hpp  types.hpp  utils.hpp
onnxocr/: onnxocr_api.cpp  onnxocr_api.h
scripts/: install_onnxruntime.sh
